Gut out and get ready for overlay creation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ksw.overlay">
 
+    <overlay
+        android:priority="1"
+        android:targetPackage="com.wits.ksw" />
+
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:hasCode="false"
+        android:label="KswOverlay" />
 </manifest>
