--- a/.compiler/manifest/PX6/AndroidManifest.xml
+++ b/.compiler/manifest/PX6/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <overlay
         android:priority="1"
-        android:targetPackage="com.android.launcher3" />
+        android:targetPackage="com.szchoiceway.index" />
 
     <application
 		android:allowBackup="false"
